completed EDA of suppliers table, renamed file from OnlineShoppingDB.ipynb to shopping-part-1-EDA.ipynb

--- a/shopping-part-1-EDA.ipynb
+++ b/shopping-part-1-EDA.ipynb
@@ -4852,6 +4852,352 @@
                 }
             ],
             "execution_count": 37
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "### **H. The suppliers table.**"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "75169489-9108-40af-a81c-03105f0d6ff8"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT TOP 1 *\n",
+                "FROM OnlineShoppingDB.dbo.suppliers "
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "1c23734d-1811-422b-94ec-88141e885feb"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.055"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 38,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "supplier_id"
+                                    },
+                                    {
+                                        "name": "supplier_name"
+                                    },
+                                    {
+                                        "name": "contact_name"
+                                    },
+                                    {
+                                        "name": "address"
+                                    },
+                                    {
+                                        "name": "phone_number"
+                                    },
+                                    {
+                                        "name": "email"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "supplier_id": "501",
+                                    "supplier_name": "Dynamic Systems Group",
+                                    "contact_name": "Donald Benjamin",
+                                    "address": "141 Shore Ln, Island City, MA",
+                                    "phone_number": "(555) 484-6922",
+                                    "email": "dbenjamin@supplier.com"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>supplier_id</th><th>supplier_name</th><th>contact_name</th><th>address</th><th>phone_number</th><th>email</th></tr>",
+                            "<tr><td>501</td><td>Dynamic Systems Group</td><td>Donald Benjamin</td><td>141 Shore Ln, Island City, MA</td><td>(555) 484-6922</td><td>dbenjamin@supplier.com</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 38
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "**i. How many different suppliers are there?**"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "955f5bd5-d4f6-4f44-9fe5-3a23c99b0603"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT COUNT(DISTINCT supplier_name) AS num_unique_suppliers\n",
+                "FROM OnlineShoppingDB.dbo.suppliers"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "23a6d86a-0ea3-45a7-989e-1dfd6db279bd"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(1 row affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.029"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 39,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "count_suppliers"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "count_suppliers": "25"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>count_suppliers</th></tr>",
+                            "<tr><td>25</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 39
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "**ii. How many times does each supplier show up?  Which supplier is the most frequently-listed?  The least?**"
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "ea05e23a-dbb2-4c28-b81b-3846705ccd18"
+            },
+            "attachments": {}
+        },
+        {
+            "cell_type": "code",
+            "source": [
+                "SELECT \n",
+                "    supplier_name, \n",
+                "    COUNT(supplier_name) AS count_suppliers\n",
+                "FROM OnlineShoppingDB.dbo.suppliers \n",
+                "GROUP BY supplier_name\n",
+                "ORDER BY count_suppliers DESC "
+            ],
+            "metadata": {
+                "language": "sql",
+                "azdata_cell_guid": "5da127a4-eded-49b2-a4f5-9f7e46bf21bc"
+            },
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(25 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.047"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 42,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "supplier_name"
+                                    },
+                                    {
+                                        "name": "count_suppliers"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "supplier_name": "Next Level Systems",
+                                    "count_suppliers": "8"
+                                },
+                                {
+                                    "supplier_name": "Modern Tech Enterprises",
+                                    "count_suppliers": "6"
+                                },
+                                {
+                                    "supplier_name": "Ultimate Services",
+                                    "count_suppliers": "6"
+                                },
+                                {
+                                    "supplier_name": "Unified Trading Co.",
+                                    "count_suppliers": "5"
+                                },
+                                {
+                                    "supplier_name": "Strategic Partners Co.",
+                                    "count_suppliers": "5"
+                                },
+                                {
+                                    "supplier_name": "Precision Suppliers LLC",
+                                    "count_suppliers": "5"
+                                },
+                                {
+                                    "supplier_name": "Premier Logistics Inc.",
+                                    "count_suppliers": "5"
+                                },
+                                {
+                                    "supplier_name": "Mega Suppliers",
+                                    "count_suppliers": "5"
+                                },
+                                {
+                                    "supplier_name": "Innovative Solutions Co.",
+                                    "count_suppliers": "4"
+                                },
+                                {
+                                    "supplier_name": "Advance Dynamics",
+                                    "count_suppliers": "4"
+                                },
+                                {
+                                    "supplier_name": "Advanced Hardware Corp.",
+                                    "count_suppliers": "4"
+                                },
+                                {
+                                    "supplier_name": "Core Technologies",
+                                    "count_suppliers": "4"
+                                },
+                                {
+                                    "supplier_name": "Dynamic Systems Group",
+                                    "count_suppliers": "4"
+                                },
+                                {
+                                    "supplier_name": "Excel Distribution Group",
+                                    "count_suppliers": "4"
+                                },
+                                {
+                                    "supplier_name": "Tech Supplies Inc.",
+                                    "count_suppliers": "4"
+                                },
+                                {
+                                    "supplier_name": "Summit Solutions Corp.",
+                                    "count_suppliers": "3"
+                                },
+                                {
+                                    "supplier_name": "Future Tech",
+                                    "count_suppliers": "3"
+                                },
+                                {
+                                    "supplier_name": "Global Goods Ltd.",
+                                    "count_suppliers": "3"
+                                },
+                                {
+                                    "supplier_name": "Elite Electronics",
+                                    "count_suppliers": "3"
+                                },
+                                {
+                                    "supplier_name": "Digital Innovations LLC",
+                                    "count_suppliers": "3"
+                                },
+                                {
+                                    "supplier_name": "Alpha Industries Ltd.",
+                                    "count_suppliers": "3"
+                                },
+                                {
+                                    "supplier_name": "Reliable Resources Inc.",
+                                    "count_suppliers": "3"
+                                },
+                                {
+                                    "supplier_name": "Professional Supply Chain",
+                                    "count_suppliers": "3"
+                                },
+                                {
+                                    "supplier_name": "Quantum Enterprises",
+                                    "count_suppliers": "2"
+                                },
+                                {
+                                    "supplier_name": "Smart Solutions Ltd.",
+                                    "count_suppliers": "1"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>supplier_name</th><th>count_suppliers</th></tr>",
+                            "<tr><td>Next Level Systems</td><td>8</td></tr>",
+                            "<tr><td>Modern Tech Enterprises</td><td>6</td></tr>",
+                            "<tr><td>Ultimate Services</td><td>6</td></tr>",
+                            "<tr><td>Unified Trading Co.</td><td>5</td></tr>",
+                            "<tr><td>Strategic Partners Co.</td><td>5</td></tr>",
+                            "<tr><td>Precision Suppliers LLC</td><td>5</td></tr>",
+                            "<tr><td>Premier Logistics Inc.</td><td>5</td></tr>",
+                            "<tr><td>Mega Suppliers</td><td>5</td></tr>",
+                            "<tr><td>Innovative Solutions Co.</td><td>4</td></tr>",
+                            "<tr><td>Advance Dynamics</td><td>4</td></tr>",
+                            "<tr><td>Advanced Hardware Corp.</td><td>4</td></tr>",
+                            "<tr><td>Core Technologies</td><td>4</td></tr>",
+                            "<tr><td>Dynamic Systems Group</td><td>4</td></tr>",
+                            "<tr><td>Excel Distribution Group</td><td>4</td></tr>",
+                            "<tr><td>Tech Supplies Inc.</td><td>4</td></tr>",
+                            "<tr><td>Summit Solutions Corp.</td><td>3</td></tr>",
+                            "<tr><td>Future Tech</td><td>3</td></tr>",
+                            "<tr><td>Global Goods Ltd.</td><td>3</td></tr>",
+                            "<tr><td>Elite Electronics</td><td>3</td></tr>",
+                            "<tr><td>Digital Innovations LLC</td><td>3</td></tr>",
+                            "<tr><td>Alpha Industries Ltd.</td><td>3</td></tr>",
+                            "<tr><td>Reliable Resources Inc.</td><td>3</td></tr>",
+                            "<tr><td>Professional Supply Chain</td><td>3</td></tr>",
+                            "<tr><td>Quantum Enterprises</td><td>2</td></tr>",
+                            "<tr><td>Smart Solutions Ltd.</td><td>1</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 42
         }
     ]
 }
